--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ThemeDagger</string>
 
     <string name="retry">Retry</string>
+    <string name="error_server">There are some problems to bring the data</string>
 </resources>
